# stackulator

./: .gitignore  README.md  stackulator.cabal
src/: Dispatch.hs  Main.hs  Stack.hs  Stackulator.hs  Value.hs  Values.hs
